added font color changed main background

--- a/src/globalStyles.module.scss
+++ b/src/globalStyles.module.scss
@@ -1,5 +1,6 @@
-$main-background: black;
+$main-background: white;
 $landing-page-background: white;
+$font-color: black;
 $accentColor: #77f6fd;
 $landing-page__side_panel: grey;
 
