--- a/src/globalStyles.module.scss
+++ b/src/globalStyles.module.scss
@@ -27,3 +27,6 @@ $fade-in-animation: fade-in $animation-time $animation-time-func forwards;
 
   @return $text-animation, $fade-in-animation;
 }
+$min-project-container-height: 47rem;
+// spacing
+$sm: 1rem;
