--- a/src/components/ProjectsContainer/projects-container.scss
+++ b/src/components/ProjectsContainer/projects-container.scss
@@ -2,12 +2,16 @@
 .projects__container {
   width: 100%;
   height: 80vh;
+  min-height: $min-project-container-height;
+  padding: 0 1rem;
+  box-sizing: border-box;
   overflow-y: scroll;
   background-color: lightgray;
   align-items: center;
   -ms-overflow-style: none; /* for Internet Explorer, Edge */
   scrollbar-width: none; /* for Firefox */
   overflow-y: scroll;
+  scroll-behavior: smooth;
 }
 .projects__container::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
@@ -16,6 +20,7 @@
   position: relative;
   height: inherit;
   width: 100%;
+  justify-content: space-around;
   // height: 100%;
   // height: 80vh;
   margin-bottom: 2rem;
@@ -55,4 +60,10 @@ $size: 75%;
   width: 100%;
   max-width: 400px;
   // height: 100%;
+}
+.current-project-button {
+  display: block;
+  max-width: 30rem;
+  margin-left: auto;
+  margin-right: auto;
 }
