--- a/src/index.scss
+++ b/src/index.scss
@@ -37,6 +37,9 @@ body {
   display: grid;
   place-items: center;
 }
+* {
+  scroll-behavior: smooth;
+}
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
