--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 @import "./globalStyles.module.scss";
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  // font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -14,7 +14,9 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-
+* {
+  font-family: "Open Sans";
+}
 a {
   font-weight: 500;
   color: #646cff;
