--- a/src/globalStyles.module.scss
+++ b/src/globalStyles.module.scss
@@ -5,6 +5,7 @@ $accentColor: #77f6fd;
 $landing-page__side_panel: grey;
 
 $breakpoints: (
+  phoneM: 375px,
   phone: 640px,
   tablet: 768px,
   desktop: 1024px,
