--- a/src/components/LandingPage/style.scss
+++ b/src/components/LandingPage/style.scss
@@ -5,7 +5,7 @@ $underline-thickness: 4px;
 $underline-spacing: 0.5rem;
 .landing-page__left {
   justify-content: space-between;
-  height: 90vh;
+  // height: 90vh;
   margin-bottom: 2rem;
 }
 
