--- a/src/utility.scss
+++ b/src/utility.scss
@@ -38,3 +38,6 @@ $box-shadow-value: 0px 1px 20px -9px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: $box-shadow-value;
   -moz-box-shadow: $box-shadow-value;
 }
+.circle {
+  border-radius: 100%;
+}
