--- a/src/components/AboutMeBlurb/styles.scss
+++ b/src/components/AboutMeBlurb/styles.scss
@@ -20,7 +20,10 @@
   list-style: none;
   margin: 0;
   padding: 0;
-
   animation: $translate-in-right-animation;
+  justify-content: space-between;
+}
+.skills-connect__container {
+  align-items: center;
   justify-content: space-between;
 }
