added pos relative to landing page panel

--- a/src/components/LandingPage/style.scss
+++ b/src/components/LandingPage/style.scss
@@ -7,6 +7,7 @@ $underline-spacing: 0.5rem;
   justify-content: space-between;
   // height: 90vh;
   margin-bottom: 2rem;
+  position: relative;
 }
 
 .landing-page__container {
