--- a/src/components/LandingPage/style.scss
+++ b/src/components/LandingPage/style.scss
@@ -21,6 +21,7 @@ $underline-spacing: 0.5rem;
     margin: 3rem 2rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 0.5rem;
   }
   .landing-page__left {
     margin-bottom: 0;
