--- a/src/components/ProjectsContainer/projects-container.scss
+++ b/src/components/ProjectsContainer/projects-container.scss
@@ -7,12 +7,18 @@
   padding: 0 1rem;
   box-sizing: border-box;
   overflow-y: scroll;
-  background-color: lightgray;
+  // background-color: lightgray;
   align-items: center;
   -ms-overflow-style: none; /* for Internet Explorer, Edge */
   scrollbar-width: none; /* for Firefox */
   overflow-y: scroll;
   scroll-behavior: smooth;
+
+  // backdrop-filter: blur(1 px);
+  // filter: grayscale(100%);
+  // background-image: url("../public/noisy-background.jpg");
+  // background-repeat: repeat;
+  // background-image: url('data:image/svg+xml,<!-- svg: first layer --><svg viewBox="0 0 400 400" xmlns="http://www.w3.org/2000/svg"><filter id="noiseFilter"><feTurbulence type="fractalNoise" baseFrequency="7.15" numOctaves="6" stitchTiles="stitch"/></filter><rect width="100%" height="100%" filter="url(%23noiseFilter)"/></svg>');
 }
 .projects__container::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
@@ -23,7 +29,7 @@
   justify-content: space-around;
   height: 100%;
   margin-bottom: 2rem;
-  background-color: lightgray;
+  // background-color: lightgray;
   align-items: center;
 }
 $size: 75%;
