--- a/src/components/AboutMeBlurb/styles.scss
+++ b/src/components/AboutMeBlurb/styles.scss
@@ -15,6 +15,7 @@
 
 .about-me-blurb {
   animation: $translate-in-left-animation;
+  font-size: clamp(10px, 1.2rem, 20px);
 }
 .skills-list {
   list-style: none;
