--- a/src/App.scss
+++ b/src/App.scss
@@ -3,4 +3,59 @@
   display: grid;
   place-items: center;
   max-width: 1440px;
+  position: relative;
+  display: flex;
+}
+.blob-svg {
+  position: absolute;
+  // scale: 0.2;
+  left: 0;
+  top: 0;
+  height: 300px;
+  width: 300px;
+
+  filter: opacity(0.5) blur(8px);
+}
+.links {
+  align-items: center;
+  padding: 1rem 0;
+}
+.name-container {
+  justify-content: flex-end;
+}
+
+.line {
+  height: 200px;
+  width: 3px;
+  background: black;
+}
+.link {
+  rotate: -90deg;
+}
+.sidebar {
+  // height: 100%;
+  justify-content: space-between;
+  align-self: flex-start;
+  align-items: center;
+  width: 100px;
+  min-height: 100vh;
+  padding: 1rem 0;
+  box-sizing: border-box;
+}
+.name {
+  white-space: nowrap;
+  text-align: center;
+  rotate: -180deg;
+  writing-mode: vertical-rl;
+  margin-top: 1rem;
+}
+.line-container {
+  flex-grow: 2;
+  align-items: center;
+  justify-content: space-between;
+}
+.sidebar-link {
+  font-size: 1.5rem;
+  margin: 0.2rem 0;
+  color: black;
 }
