--- a/src/index.scss
+++ b/src/index.scss
@@ -32,12 +32,41 @@ body,
   min-width: 320px;
   min-height: 100vh;
   width: 100%;
-  background: $main-background;
+  // background: $main-background;
   color: $font-color;
+  // background-image: url('data:image/svg+xml,<!-- svg: first layer --><svg viewBox="0 0 400 400" xmlns="http://www.w3.org/2000/svg"><filter id="noiseFilter"><feTurbulence type="fractalNoise" baseFrequency="7.15" numOctaves="6" stitchTiles="stitch"/></filter><rect width="100%" height="100%" filter="url(%23noiseFilter)"/></svg>');
 }
 body {
   display: grid;
   place-items: center;
+}
+body {
+  background-color: #ffffff;
+  background-image: radial-gradient(
+      at 94% 34%,
+      hsla(207, 94%, 52%, 1) 0,
+      hsla(207, 94%, 52%, 0) 50%
+    ),
+    radial-gradient(
+      at 1% 56%,
+      hsla(31, 86%, 67%, 1) 0,
+      hsla(31, 86%, 67%, 0) 50%
+    );
+}
+body:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.15;
+  mix-blend-mode: multiply;
+  background-image: url("../public/noisy-background.jpg");
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
 }
 * {
   scroll-behavior: smooth;
