--- a/src/index.scss
+++ b/src/index.scss
@@ -64,9 +64,9 @@ body:before {
   opacity: 0.15;
   mix-blend-mode: multiply;
   background-image: url("../public/noisy-background.jpg");
-  background-repeat: no-repeat;
-  background-position: 50% 0;
+  background-repeat: repeat;
   background-size: cover;
+  background-position: 50% 0;
 }
 * {
   scroll-behavior: smooth;
