--- a/src/App.scss
+++ b/src/App.scss
@@ -20,42 +20,8 @@
   align-items: center;
   padding: 1rem 0;
 }
-.name-container {
-  justify-content: flex-end;
-}
 
-.line {
-  height: 200px;
-  width: 3px;
-  background: black;
-}
-.link {
-  rotate: -90deg;
-}
-.sidebar {
-  // height: 100%;
-  justify-content: space-between;
-  align-self: flex-start;
-  align-items: center;
-  width: 100px;
-  min-height: 100vh;
-  padding: 1rem 0;
-  box-sizing: border-box;
-}
-.name {
-  white-space: nowrap;
-  text-align: center;
-  rotate: -180deg;
-  writing-mode: vertical-rl;
-  margin-top: 1rem;
-}
-.line-container {
-  flex-grow: 2;
-  align-items: center;
-  justify-content: space-between;
-}
-.sidebar-link {
-  font-size: 1.5rem;
-  margin: 0.2rem 0;
-  color: black;
+.page__container {
+  display: grid;
+  grid-template-columns: $sidebar-width auto $sidebar-width;
 }
