--- a/src/utility.scss
+++ b/src/utility.scss
@@ -3,6 +3,9 @@
   display: flex;
   flex-direction: column;
 }
+.flex-justify-end {
+  justify-content: flex-end;
+}
 .flex-row {
   display: flex;
 }
@@ -31,6 +34,10 @@
 }
 .margin-top--sm {
   margin-top: $sm;
+}
+.sticky-top {
+  position: sticky;
+  top: 0;
 }
 .greyscale {
   filter: grayscale(1);
