--- a/src/globalStyles.module.scss
+++ b/src/globalStyles.module.scss
@@ -31,3 +31,11 @@ $fade-in-animation: fade-in $animation-time $animation-time-func forwards;
 $min-project-container-height: 47rem;
 // spacing
 $sm: 1rem;
+
+// sidebar
+$sidebar-line-width: 3px;
+$sidebar-line-height: 100px;
+$sidebar-line-color: black;
+$sidebar-line-size: 1.5rem;
+$sidebar-width: 100px;
+$sidebar-line-content-spacing: 1rem;
