added background gradient to global

--- a/src/globalStyles.module.scss
+++ b/src/globalStyles.module.scss
@@ -3,7 +3,12 @@ $landing-page-background: white;
 $font-color: black;
 $accentColor: #77f6fd;
 $landing-page__side_panel: grey;
-
+$background-gradient: radial-gradient(
+    at 94% 34%,
+    hsla(207, 94%, 52%, 1) 0,
+    hsla(207, 94%, 52%, 0) 50%
+  ),
+  radial-gradient(at 1% 56%, hsla(31, 86%, 67%, 1) 0, hsla(31, 86%, 67%, 0) 50%);
 $breakpoints: (
   phoneM: 375px,
   phone: 640px,
