--- a/src/index.scss
+++ b/src/index.scss
@@ -32,9 +32,7 @@ body,
   min-width: 320px;
   min-height: 100vh;
   width: 100%;
-  // background: $main-background;
   color: $font-color;
-  // background-image: url('data:image/svg+xml,<!-- svg: first layer --><svg viewBox="0 0 400 400" xmlns="http://www.w3.org/2000/svg"><filter id="noiseFilter"><feTurbulence type="fractalNoise" baseFrequency="7.15" numOctaves="6" stitchTiles="stitch"/></filter><rect width="100%" height="100%" filter="url(%23noiseFilter)"/></svg>');
 }
 body {
   display: grid;
@@ -42,16 +40,7 @@ body {
 }
 body {
   background-color: #ffffff;
-  background-image: radial-gradient(
-      at 94% 34%,
-      hsla(207, 94%, 52%, 1) 0,
-      hsla(207, 94%, 52%, 0) 50%
-    ),
-    radial-gradient(
-      at 1% 56%,
-      hsla(31, 86%, 67%, 1) 0,
-      hsla(31, 86%, 67%, 0) 50%
-    );
+  background-image: $background-gradient;
 }
 
 * {
