--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,8 @@
 @import "./globalStyles.module.scss";
 
 :root {
-  // font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
 
@@ -34,15 +32,20 @@ body,
   width: 100%;
   color: $font-color;
 }
+#root {
+  display: grid;
+  place-items: center;
+  max-width: 1440px;
+  position: relative;
+  display: flex;
+}
+
 body {
   display: grid;
   place-items: center;
-}
-body {
   background-color: #ffffff;
   background-image: $background-gradient;
 }
-
 * {
   scroll-behavior: smooth;
 }
