--- a/src/welcome-header.scss
+++ b/src/welcome-header.scss
@@ -7,7 +7,8 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  width: 20ch;
+  min-width: 10ch;
+  max-width: 20ch;
   font-size: 1.5rem;
   span {
     font-family: "Playfair Display", serif;
